fixed responsive hamburger for phone

--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body id="main-body">
     <header class="flex">
       <div>
         <a href=""><img src="images/common/logo.png" alt="logo" /></a>
@@ -30,6 +30,10 @@
       <div id="user">
         <a href=""><img id="hamburger" src="images/common/bars-solid.svg" /></a>
         <img id="user-icon" src="images/common/user.png" />
+      </div>
+
+      <div id="phone-hamburger">
+        <a href=""><img id="hamburger" src="images/common/bars-solid-black.svg" /></a>
       </div>
     </header>
 
